--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -35,6 +35,9 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
           <a class="inline-block font-bold text-lg" href={getHomePermalink()}>{SITE?.name} {SITE?.subname}</a>
+          <!-- Church Address Here -->
+          <br /><span set:html={SITE?.address} />
+          <br /><span set:html={SITE?.phone} />
         </div>
         <div class="text-sm text-muted flex gap-1">
           {
