fix: larger logo and feature title size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,12 @@ const metadata = {
   ignoreTitleTemplate: true,
 };
 
+const featureHeadline = {
+  headline: {
+    title: 'text-4xl md:text-5xl ',
+  },
+};
+
 const address = SITE?.address;
 const appleMaps = SITE?.appleMaps;
 const googleMaps = SITE?.googleMaps;
@@ -27,9 +33,11 @@ const googleMaps = SITE?.googleMaps;
     }}
   >
     <Fragment slot="content">
-      At Pleasant Home Community Church, we worship our Savior Jesus Christ, study His Word, and enjoy sweet fellowship
-      with one another.<br /><br />Established in 1897, we have a long history of Biblical faithfulness which continues
-      today through the expository preaching of God's Word.
+      <span class="text-xl">
+        At Pleasant Home Community Church, we worship our Savior Jesus Christ, study His Word, and enjoy sweet
+        fellowship with one another.<br /><br />Established in 1897, we have a long history of Biblical faithfulness
+        which continues today through the expository preaching of God's Word.
+      </span>
     </Fragment>
   </Content>
 
@@ -66,6 +74,7 @@ const googleMaps = SITE?.googleMaps;
     title="What to Expect"
     subtitle="When you visit one of our services, you will notice that we like to keep things simple. We are not about flashy church growth strategies or entertaining our members. We are about knowing God, making Him known, and enjoying the common salvation we have with the saints of Christ. We are a church that holds to the inerrancy, infallibility, and sufficiency of Scripture. We invite you to come and worship with us."
     columns={3}
+    classes={featureHeadline}
     items={[
       {
         title: 'Friendly Believers',
