fix: lots of updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ const featureHeadline = {
 };
 
 const address = SITE?.address;
+const cityState = SITE?.cityState;
 const appleMaps = SITE?.appleMaps;
 const googleMaps = SITE?.googleMaps;
 ---
@@ -27,7 +28,7 @@ const googleMaps = SITE?.googleMaps;
     isReversed
     title="Welcome!"
     image={{
-      src: '~/assets/images/phcc-front-building-crop.webp',
+      src: '~/assets/images/phcc-front-building-crop-muted.webp',
       alt: 'Pleasant Home Community Church',
       height: 400,
     }}
@@ -57,7 +58,7 @@ const googleMaps = SITE?.googleMaps;
       <h3 class="text-xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">Sunday Morning</h3>
       9:00 am, 10:45 am<br /><br />
       <h3 class="text-xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">Location</h3>
-      <span set:html={address} /><br /><br />
+      <span set:html={address} /><br /><span set:html={cityState} /><br /><br />
       <a href={appleMaps} target="_blank"><Icon name="tabler:brand-apple" class="w-5 h-5 inline" /></a>
       <a href={googleMaps} target="_blank"><Icon name="tabler:brand-google" class="w-5 h-5 inline" /></a>
     </Fragment>
