--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -34,7 +34,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/pastor-ryan-wethern-edited.jpg',
+      src: '~/assets/images/pastor-ryan-wethern-edited.webp',
       alt: 'Pastor Ryan Wethern and Family',
       height: 400,
     }}
@@ -107,7 +107,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: '~/assets/images/elder-syd-brestel-edited.jpg',
+      src: '~/assets/images/elder-syd-brestel-edited.webp',
       alt: 'Elder Syd Brestel and Family',
       height: 400,
     }}
@@ -129,7 +129,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/elder-mike-garland-edited.jpg',
+      src: '~/assets/images/elder-mike-garland-edited.webp',
       alt: 'Elder Mike Garland and Family',
       height: 400,
     }}
@@ -164,7 +164,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/worship-rod-eels.jpg',
+      src: '~/assets/images/worship-rod-eels-edited.webp',
       alt: 'Worship Director Rod Eells and Family',
       height: 400,
     }}
