--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -36,8 +36,10 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
         <div class="mb-2">
           <a class="inline-block font-bold text-lg" href={getHomePermalink()}>{SITE?.name} {SITE?.subname}</a>
           <!-- Church Address Here -->
-          <br /><span set:html={SITE?.address} />
-          <br /><span set:html={SITE?.phone} />
+          <br />{(<Icon name="tabler:map-pin" class="w-5 h-5 inline" />)}
+          <span set:html={SITE?.address} />, <span set:html={SITE?.cityState} />
+          <br />{(<Icon name="tabler:phone" class="w-5 h-5 inline" />)}
+          <span set:html={SITE?.phone} />
         </div>
         <div class="text-sm text-muted flex gap-1">
           {
