--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { language, textDirection } = I18N;
     <Fonts />
 
     <!-- Comment the line below to disable View Transitions -->
-    <ClientRouter fallback="swap" />
+    <!-- <ClientRouter fallback="swap" /> -->
   </head>
 
   <body class="antialiased text-default bg-page tracking-tight">
