--- a/src/pages/beliefs.astro
+++ b/src/pages/beliefs.astro
@@ -130,6 +130,8 @@ const faqHeadline = {
   />
 
   <section class='not-prose"'>
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-sm text-left font-medium">* Historic Baptist Distinctive</div>
+    <div class="grid mx-auto gap-8 max-w-4xl gap-y-8 md:gap-y-12 text-sm text-muted text-left">
+      * Historic Baptist Distinctive<br /><br />
+    </div>
   </section>
 </Layout>
