--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -51,7 +51,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -98,7 +98,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -140,7 +140,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -175,7 +175,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
