feat: added ministries with simplified content

--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -68,11 +68,9 @@ const metadata = {
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Jason Evans</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2><br />
-      Pastor Mike began serving at Pleasant Home Community Church in September 2017. He and his wife, Katy were married in
-      January 2005 in Estacada, OR and have four children. Prior to coming to PHCC, Mike served in youth and children's ministry
-      for over a decade. He completed his undergraduate at Multnomah Bible School (2011), before receiving his Masters of
-      Divinity from The Master's Seminary (2017). It is Mike's passion to connect people to God through His Word. He also
-      finds pleasure in spending time with his family, running and being outdoors.
+      Jason has attended PHCC since 2014. He and his wife, Emily, were married in 2009 and have six children. Jason is currently
+      serving as the Youth Pastor for PHCC. It's his desire to encourage students to build a strong foundation of faith and
+      knowledge in God's Word. In his free time, Jason enjoys spending time with his family and being outdoors.
     </Fragment>
   </Content>
 
