--- a/src/components/widgets/BlogLatestPosts.astro
+++ b/src/components/widgets/BlogLatestPosts.astro
@@ -1,10 +1,10 @@
 ---
-import { APP_BLOG } from 'astrowind:config';
+import { APP_MINISTRIES } from 'astrowind:config';
 
-import Grid from '~/components/blog/Grid.astro';
+import Grid from '~/components/ministries/Grid.astro';
 
-import { getBlogPermalink } from '~/utils/permalinks';
-import { findLatestPosts } from '~/utils/blog';
+import { getMinistriesPermalink } from '~/utils/permalinks';
+import { findLatestPosts } from '~/utils/ministries';
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 import type { Widget } from '~/types';
 import Button from '../ui/Button.astro';
@@ -20,7 +20,7 @@ export interface Props extends Widget {
 const {
   title = await Astro.slots.render('title'),
   linkText = 'View all posts',
-  linkUrl = getBlogPermalink(),
+  linkUrl = getMinistriesPermalink(),
   information = await Astro.slots.render('information'),
   count = 4,
 
@@ -30,11 +30,11 @@ const {
   bg = await Astro.slots.render('bg'),
 } = Astro.props;
 
-const posts = APP_BLOG.isEnabled ? await findLatestPosts({ count }) : [];
+const posts = APP_MINISTRIES.isEnabled ? await findLatestPosts({ count }) : [];
 ---
 
 {
-  APP_BLOG.isEnabled ? (
+  APP_MINISTRIES.isEnabled ? (
     <WidgetWrapper id={id} isDark={isDark} containerClass={classes?.container as string} bg={bg}>
       <div class="flex flex-col lg:justify-between lg:flex-row mb-8">
         {title && (
@@ -43,7 +43,7 @@ const posts = APP_BLOG.isEnabled ? await findLatestPosts({ count }) : [];
               class="text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none group font-heading mb-2"
               set:html={title}
             />
-            {APP_BLOG.list.isEnabled && linkText && linkUrl && (
+            {APP_MINISTRIES.list.isEnabled && linkText && linkUrl && (
               <Button variant="link" href={linkUrl}>
                 {' '}
                 {linkText} »
