--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -20,7 +20,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Mike Johnson</h3>
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Mike Johnston</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Senior Pastor</h2><br />
       Pastor Mike began serving at Pleasant Home Community Church in September 2017. He and his wife, Katy were married in
       January 2005 in Estacada, OR and have four children. Prior to coming to PHCC, Mike served in youth and children's ministry
