feat: added emails

--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from 'astro-icon/components';
 import Layout from '~/layouts/PageLayout.astro';
 import Content from '~/components/widgets/Content.astro';
 
@@ -21,7 +22,12 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Mike Johnston</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Senior Pastor</h2><br />
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Senior Pastor</h2>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
+        <a href="mailto:pastormike@pleasanthome.cc"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastormike@pleasanthome.cc</a
+        >
+      </h2><br />
       Pastor Mike began serving at Pleasant Home Community Church in September 2017. He and his wife, Katy were married in
       January 2005 in Estacada, OR and have four children. Prior to coming to PHCC, Mike served in youth and children's ministry
       for over a decade. He completed his undergraduate at Multnomah Bible School (2011), before receiving his Masters of
@@ -41,7 +47,12 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ryan Wethern</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Associate Pastor</h2><br />
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Associate Pastor</h2>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
+        <a href="mailto:pastorryan@pleasanthome.cc"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorryan@pleasanthome.cc</a
+        >
+      </h2><br />
       Pastor Ryan came to PHCC in February 2021. He and his wife, Becky, have been married since January 2006, and they have
       four children. From 2006 to 2013, Ryan served in youth ministry in Reno, NV, and it was there that he realized his
       need for more training. Upon moving to Southern California, Ryan completed his undergraduate degree in Biblical Counseling
@@ -67,7 +78,12 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Jason Evans</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2><br />
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
+        <a href="mailto:pastorjason@pleasanthome.cc"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorjason@pleasanthome.cc</a
+        >
+      </h2><br />
       Jason has attended PHCC since 2014. He and his wife, Emily, were married in 2009 and have six children. Jason is currently
       serving as the Youth Pastor for PHCC. It's his desire to encourage students to build a strong foundation of faith and
       knowledge in God's Word. In his free time, Jason enjoys spending time with his family and being outdoors.
