--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -38,6 +38,8 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
           <!-- Church Address Here -->
           <br />{(<Icon name="tabler:map-pin" class="w-5 h-5 inline" />)}
           <span set:html={SITE?.address} />, <span set:html={SITE?.cityState} />
+          <br />{(<Icon name="tabler:mail" class="w-5 h-5 inline" />)}
+          <a href=`mailto:${SITE?.email}?subject=Contact from Website` set:html={SITE?.email} />
           <br />{(<Icon name="tabler:phone" class="w-5 h-5 inline" />)}
           <span set:html={SITE?.phone} />
         </div>
